--- a/public/about.html
+++ b/public/about.html
@@ -1,4 +1,6 @@
 <h1>About Me</h1>
+<p>Still under construction, thanks for visiting!</p>
+
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
   elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
   Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
