added colors, css

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./style.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Austin's Portfolio</title>
 </head>
 <body>
     <h1>Austin's Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
+    <h2 id="webdev">I'm a Web Developer</h2>
     <hr/>
-    <h4>Click <a href="http://139.144.239.197">here</a> to get a fortune!</h4>
+    <h4 id="fortune">Click <a href="http://139.144.239.197">here</a> to get a fortune!</h4>
     <a href="./public/movieranking.html"><h3>Movie Ranking Project</h3></a>
     <img src="./assets/images/thebestmovies.png" style="height: 300px;"/>
 
